# MyJewellery

./: .gitignore  README.md  pyproject.toml
app/: errors.py  main.py  repository.py  schemas.py  services.py
tests/: test_orders.py  test_repository.py
